# kiwi

server/: hrm.sql.1  init_file  pyproject.toml
server/apps/attendance/: models.py
server/apps/authentication/: adapters.py  apps.py  inputs.py  strategies.py  urls.py  views.py
server/apps/authentication/helpers/: company_join.py  host.py  redirection_path.py  user_auth_workflow.py
server/apps/organization/: models.py
server/apps/timesheet/: models.py
server/apps/user/: models.py
server/core/: settings.py
server/lib/: models.py
web/: components.json  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/assets/css/: tailwind.css
web/app/components/forms/: signin-form.vue  signup-form.vue
web/app/components/ui/accordion/: AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
web/app/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogTitle.vue
web/app/components/ui/breadcrumb/: BreadcrumbLink.vue
web/app/components/ui/button/: Button.vue
web/app/components/ui/calendar/: Calendar.vue  (+9 more)
web/modules/api/: index.ts
web/modules/api/runtime/: composable.ts  plugin.ts  types.ts  utils.ts
web/modules/auth/: index.ts
web/modules/auth/runtime/: composable.ts  middleware.ts
web/modules/breadcrumb/: index.ts
web/modules/breadcrumb/runtime/: composable.ts  utils.ts
web/modules/route-rules-layout/: index.ts
web/modules/stateful-cookie/: index.ts
web/modules/stateful-cookie/runtime/: composable.ts
(+40 files in other folders)
